--- a/environment-promotion/envs/apps/application.yaml
+++ b/environment-promotion/envs/apps/application.yaml
@@ -1,13 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: 'prod'
+  name: 'staging'
 spec:
   destination:
-    namespace: 'prod'
+    namespace: 'staging'
     server: 'https://kubernetes.default.svc'
   source:
-    path: './environment-promotion/env/prod'
+    path: './environment-promotion/env/staging'
     repoURL: 'https://github.com/EsterSteinberger/gitops-cert-level-2-examples.git'
     targetRevision: HEAD
   project: 'default'
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true  
+    automated:
+      prune: true
+      selfHeal: true
